[tool.poetry]
name = "probability-distributions"
version = "0.1.0"
description = ""
authors = ["I.K. <tessier_ashpool@outlook.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
scipy = "^1.7.3"
matplotlib = "^3.5.1"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]
ipykernel = "^6.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
